src/test/ui/transmutability/structs.stderr
error[E0277]: the trait bound `Unspecified: BikeshedIntrinsicFromAny<WellDefined>` is not satisfied
  --> $DIR/structs.rs:11:47
   |
LL |     assert_is_transmutable_any::<WellDefined, Unspecified>();
   |                                               ^^^^^^^^^^^ the trait `BikeshedIntrinsicFromAny<WellDefined>` is not implemented for `Unspecified`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/structs.rs:71:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `WellDefined: BikeshedIntrinsicFromAny<Unspecified>` is not satisfied
  --> $DIR/structs.rs:12:47
   |
LL |     assert_is_transmutable_any::<Unspecified, WellDefined>();
   |                                               ^^^^^^^^^^^ the trait `BikeshedIntrinsicFromAny<Unspecified>` is not implemented for `WellDefined`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/structs.rs:71:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `Unspecified: BikeshedIntrinsicFromAny<Unspecified>` is not satisfied
  --> $DIR/structs.rs:13:47
   |
LL |     assert_is_transmutable_any::<Unspecified, Unspecified>();
   |                                               ^^^^^^^^^^^ the trait `BikeshedIntrinsicFromAny<Unspecified>` is not implemented for `Unspecified`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/structs.rs:71:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `u16: BikeshedIntrinsicFromAny<U8ThenPadding>` is not satisfied
  --> $DIR/structs.rs:30:49
   |
LL |     assert_is_transmutable_any::<U8ThenPadding, u16>();
   |                                                 ^^^ the trait `BikeshedIntrinsicFromAny<U8ThenPadding>` is not implemented for `u16`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/structs.rs:71:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error[E0277]: the trait bound `Unpadded: BikeshedIntrinsicFromAny<Padded>` is not satisfied
  --> $DIR/structs.rs:38:42
   |
LL |     assert_is_transmutable_any::<Padded, Unpadded>();
   |                                          ^^^^^^^^ the trait `BikeshedIntrinsicFromAny<Padded>` is not implemented for `Unpadded`
   |
note: required by a bound in `assert_is_transmutable_any`
  --> $DIR/structs.rs:71:11
   |
LL | fn assert_is_transmutable_any<Src, Dst>()
   |    -------------------------- required by a bound in this
LL | where
LL |     Dst:  BikeshedIntrinsicFromAny<Src>
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_any`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
